fix on firefox

--- a/styles.css
+++ b/styles.css
@@ -548,3 +548,7 @@ figure {
   display: flex;
   align-items: center;
 }
+
+figcaption {
+  padding: 30px;
+}
